--- a/receiver/magicreceiver/colconfig.yaml
+++ b/receiver/magicreceiver/colconfig.yaml
@@ -2,13 +2,11 @@ receivers:
   magic:
 
 exporters:
-  magic/a:
-    name: a
-  magic/b:
-    name: b
+  magic:
+    name: exporter
 
 service:
   pipelines:
     metrics:
       receivers: [magic]
-      exporters: [magic/a, magic/b]
+      exporters: [magic]
