add buffering to exporter, commpat with batch processor

--- a/receiver/magicreceiver/colconfig.yaml
+++ b/receiver/magicreceiver/colconfig.yaml
@@ -1,6 +1,10 @@
 receivers:
   magic:
 
+processors:
+  batch:
+    send_batch_size: 2
+
 exporters:
   magic:
     name: exporter
@@ -9,4 +13,5 @@ service:
   pipelines:
     metrics:
       receivers: [magic]
+      processors: [batch]
       exporters: [magic]
