--- a/receiver/magicreceiver/config.yaml
+++ b/receiver/magicreceiver/config.yaml
@@ -2,6 +2,7 @@ dist:
   name: otelcol-dev
   description: "Basic"
   output_path: ./otelcol-dev
+  otelcol_version: 0.68.0
 
 receivers:
   - import: magicreceiver
@@ -10,6 +11,9 @@ receivers:
 exporters:
   - import: magicexporter
     gomod: magicexporter v0.64.0
+
+processors:
+  - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.68.0
 
 replaces:
   - magicreceiver => ../
